--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
-<script src="/datamaps.usa.min.js"></script>
+<script src="/voter-turnout/datamaps.usa.min.js"></script>
 <h1>Turnout Rate by State, 2016 Election</h1>
 <div id="container"></div>
 <div>Source: <a href="http://www.electproject.org/2016g">http://www.electproject.org/2016g</a></div>
